syntax = "proto3";

package server;
option go_package = "github.com/rigochain/rigo-go/libs/sfeeder/server";

service SecretFeederSvc {
  rpc Handshake(ReqHandshake) returns (RespHandshake) {}
  rpc NewSecret(ReqNewSecret) returns (RespNewSecret) {}
  rpc GetSecret(ReqGetSecret) returns (RespGetSecret) {}
  rpc UpdateSecret(ReqUpdateSecret) returns (RespUpdateSecret) {}
}

message ReqHandshake {
  string id = 1;
  bytes pub = 2;
}

message RespHandshake {
  bytes pub = 1;
}


message ReqNewSecret {
  string id = 1;
  bytes address = 2;
  bytes secret = 3;
}

message RespNewSecret {
  bool result = 1;
}

message ReqGetSecret {
  string id = 1;
  bytes address = 2;
}

message RespGetSecret {
  bytes address = 1;
  bytes secret = 2;
}

message ReqUpdateSecret {
  string id = 1;
  bytes address = 2;
  bytes old_secret = 3;
  bytes new_secret = 4;
}

message RespUpdateSecret {
  bool result = 1;
}